--- a/index.html
+++ b/index.html
@@ -119,15 +119,23 @@
         <div class="container">
           <ul class="list about-list">
             <li class="about-list-item">
-              <img
+              <div class="about-thumb">
+                <img
                 class="about-list-item-img"
                 src="./images/tablet_computer.jpg"
                 alt="Планшет з клавіатурою"
                 width="370"
                 height="294"
               />
+              <div class="label">
+                <P class="label-desc">
+                  Десктопні додатки
+                </P>
+              </div>             
+            </div>
             </li>
             <li class="about-list-item">
+              <div class="about-thumb">
               <img
                 class="about-list-item-img"
                 src="./images/mobile.jpg"
@@ -135,8 +143,15 @@
                 width="370"
                 height="294"
               />
+              <div class="label">
+                <P class="label-desc">
+                  Мобільні додатки
+                </P>
+              </div>             
+            </div>
             </li>
             <li class="about-list-item">
+              <div class="about-thumb">
               <img
                 class="about-list-item-img"
                 src="./images/tablet.jpg"
@@ -144,6 +159,12 @@
                 width="370"
                 height="294"
               />
+              <div class="label">
+                <P class="label-desc">
+                  Дизайнерські рішення
+                </P>
+              </div>             
+            </div>
             </li>
           </ul>
         </div>
