--- a/portfolio.html
+++ b/portfolio.html
@@ -79,26 +79,40 @@
           </ul>
           <ul class="list portfolio-list">
             <li class="portfolio-list-img-item">
-              <img
+              <div class="portfolio-thumb">
+                <img
                 class="porfolio-img"
                 src="./images/portfolio_img/tehnokryak.jpg"
                 alt="фото Веб-сайт "
                 width="370"
-                height="294"
-              />
+                height="294"/>
+              <div class="overlay">
+                <p class="overlay-desc">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+              </div>
+              
               <div class="portfolio-info">
                 <h3 class="portfolio-tittle">Технокряк</h3>
                 <p class="portfolio-name">Веб-сайт</p>
               </div>
             </li>
             <li class="portfolio-list-img-item">
+              <div class="portfolio-thumb">
               <img
                 class="porfolio-img"
                 src="./images/portfolio_img/poster.jpg"
                 alt="фото Веб-сайт Постера New Orlean vs Golden Star "
                 width="370"
-                height="294"
-              />
+                height="294"/>
+              
+              <div class="overlay">
+                <p class="overlay-desc">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+              </div>
               <div class="portfolio-info">
                 <h3 class="portfolio-tittle">
                   Постер <span lang="en">Orlean vs Golden Star</span>
@@ -107,6 +121,7 @@
               </div>
             </li>
             <li class="portfolio-list-img-item">
+              <div class="portfolio-thumb">
               <img
                 class="porfolio-img"
                 src="./images/portfolio_img/restoran-seafood.jpg"
@@ -114,12 +129,19 @@
                 width="370"
                 height="294"
               />
+              <div class="overlay">
+                <p class="overlay-desc">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+              </div>
               <div class="portfolio-info">
                 <h3 class="portfolio-tittle">Ресторан <span lang="en">Seafood</span></h3>
                 <p class="portfolio-name">Додаток</p>
               </div>
             </li>
             <li class="portfolio-list-img-item">
+              <div class="portfolio-thumb">
               <img
                 class="porfolio-img"
                 src="./images/portfolio_img/project-prime.jpg"
@@ -127,12 +149,19 @@
                 width="370"
                 height="294"
               />
+              <div class="overlay">
+                <p class="overlay-desc">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+              </div>
               <div class="portfolio-info">
                 <h3 class="portfolio-tittle">Проєкт <span lang="en">Prime</span></h3>
                 <p class="portfolio-name">Маркетинг</p>
               </div>
             </li>
             <li class="portfolio-list-img-item">
+              <div class="portfolio-thumb">
               <img
                 class="porfolio-img"
                 src="./images/portfolio_img/project-boxes.jpg"
@@ -140,12 +169,19 @@
                 width="370"
                 height="294"
               />
+              <div class="overlay">
+                <p class="overlay-desc">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+              </div>
               <div class="portfolio-info">
                 <h3 class="portfolio-tittle">Проєкт <span lang="en">Boxes</span></h3>
                 <p class="portfolio-name">Додаток</p>
               </div>
             </li>
             <li class="portfolio-list-img-item">
+              <div class="portfolio-thumb">
               <img
                 class="porfolio-img"
                 src="./images/portfolio_img/inspiration.jpg"
@@ -153,12 +189,19 @@
                 width="370"
                 height="294"
               />
+              <div class="overlay">
+                <p class="overlay-desc">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+              </div>
               <div class="portfolio-info">
                 <h3 lang="en" class="portfolio-tittle">Inspiration has no Borders</h3>
                 <p class="portfolio-name">Веб-сайт</p>
               </div>
             </li>
             <li class="portfolio-list-img-item">
+              <div class="portfolio-thumb">
               <img
                 class="porfolio-img"
                 src="./images/portfolio_img/pressa.jpg"
@@ -166,12 +209,19 @@
                 width="370"
                 height="294"
               />
+              <div class="overlay">
+                <p class="overlay-desc">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+              </div>
               <div class="portfolio-info">
                 <h3 class="portfolio-tittle">Видання <span lang="en">Limited Edition</span></h3>
                 <p class="portfolio-name">Дизайн</p>
               </div>
             </li>
             <li class="portfolio-list-img-item">
+              <div class="portfolio-thumb">
               <img
                 class="porfolio-img"
                 src="./images/portfolio_img/project-lab.jpg"
@@ -179,12 +229,19 @@
                 width="370"
                 height="294"
               />
+              <div class="overlay">
+                <p class="overlay-desc">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+              </div>
               <div class="portfolio-info">
                 <h3 class="portfolio-tittle">Проєкт <span lang="en">LAB</span></h3>
                 <p class="portfolio-name">Маркетинг</p>
               </div>
             </li>
             <li class="portfolio-list-img-item">
+              <div class="portfolio-thumb">
               <img
                 class="porfolio-img"
                 src="./images/portfolio_img/growinf-business.jpg"
@@ -192,6 +249,12 @@
                 width="370"
                 height="294"
               />
+              <div class="overlay">
+                <p class="overlay-desc">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+              </div>
               <div class="portfolio-info">
                 <h3 lang="en" class="portfolio-tittle">Growing Business</h3>
                 <p class="portfolio-name">Додаток</p>
