--- a/portfolio.html
+++ b/portfolio.html
@@ -79,6 +79,7 @@
           </ul>
           <ul class="list portfolio-list">
             <li class="portfolio-list-img-item">
+              <a class="porfolio-link" href=""> 
               <div class="portfolio-thumb">
                 <img
                   class="porfolio-img"
@@ -95,13 +96,14 @@
                   </p>
                 </div>
               </div>
-
               <div class="portfolio-info">
                 <h3 class="portfolio-tittle">Технокряк</h3>
                 <p class="portfolio-name">Веб-сайт</p>
               </div>
+            </a>
             </li>
             <li class="portfolio-list-img-item">
+              <a class="porfolio-link" href=""> 
               <div class="portfolio-thumb">
                 <img
                   class="porfolio-img"
@@ -125,8 +127,10 @@
                 </h3>
                 <p class="portfolio-name">Дизайн</p>
               </div>
+              </a>
             </li>
             <li class="portfolio-list-img-item">
+              <a class="porfolio-link" href="">
               <div class="portfolio-thumb">
                 <img
                   class="porfolio-img"
@@ -147,8 +151,10 @@
                 <h3 class="portfolio-tittle">Ресторан <span lang="en">Seafood</span></h3>
                 <p class="portfolio-name">Додаток</p>
               </div>
+              </a>
             </li>
             <li class="portfolio-list-img-item">
+              <a class="porfolio-link" href=""> 
               <div class="portfolio-thumb">
                 <img
                   class="porfolio-img"
@@ -169,8 +175,10 @@
                 <h3 class="portfolio-tittle">Проєкт <span lang="en">Prime</span></h3>
                 <p class="portfolio-name">Маркетинг</p>
               </div>
+              </a>
             </li>
             <li class="portfolio-list-img-item">
+              <a class="porfolio-link" href=""> 
               <div class="portfolio-thumb">
                 <img
                   class="porfolio-img"
@@ -191,8 +199,10 @@
                 <h3 class="portfolio-tittle">Проєкт <span lang="en">Boxes</span></h3>
                 <p class="portfolio-name">Додаток</p>
               </div>
+              </a>
             </li>
             <li class="portfolio-list-img-item">
+              <a class="porfolio-link" href=""> 
               <div class="portfolio-thumb">
                 <img
                   class="porfolio-img"
@@ -213,8 +223,10 @@
                 <h3 lang="en" class="portfolio-tittle">Inspiration has no Borders</h3>
                 <p class="portfolio-name">Веб-сайт</p>
               </div>
+              </a>
             </li>
             <li class="portfolio-list-img-item">
+              <a class="porfolio-link" href=""> 
               <div class="portfolio-thumb">
                 <img
                   class="porfolio-img"
@@ -235,8 +247,10 @@
                 <h3 class="portfolio-tittle">Видання <span lang="en">Limited Edition</span></h3>
                 <p class="portfolio-name">Дизайн</p>
               </div>
+              </a>
             </li>
             <li class="portfolio-list-img-item">
+              <a class="porfolio-link" href=""> 
               <div class="portfolio-thumb">
                 <img
                   class="porfolio-img"
@@ -257,8 +271,10 @@
                 <h3 class="portfolio-tittle">Проєкт <span lang="en">LAB</span></h3>
                 <p class="portfolio-name">Маркетинг</p>
               </div>
+              </a>
             </li>
             <li class="portfolio-list-img-item">
+              <a class="porfolio-link" href=""> 
               <div class="portfolio-thumb">
                 <img
                   class="porfolio-img"
@@ -279,6 +295,7 @@
                 <h3 lang="en" class="portfolio-tittle">Growing Business</h3>
                 <p class="portfolio-name">Додаток</p>
               </div>
+              </a>
             </li>
           </ul>
         </div>
