--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
           <a class="logo" href="index.html"><span class="logo-cl">Web</span>Studio</a>
           <ul class="list list-block">
             <li class="header-nav-list-item active-page">
-              <a class="link" href="./index.html">Студія</a>
+              <a class="link header-animation-nav" href="./index.html">Студія</a>
             </li>
             <li class="header-nav-list-item">
-              <a class="link" href="./portfolio.html">Портфоліо</a>
+              <a class="link header-animation-nav" href="./portfolio.html">Портфоліо</a>
             </li>
-            <li class="header-nav-list-item"><a class="link" href="">Контакти</a></li>
+            <li class="header-nav-list-item"><a class="link header-animation-nav" href="">Контакти</a></li>
           </ul>
         </nav>
         <ul class="list list-block">
           <li class="header-nav-list-contacti-item">
-            <a class="link link-header" href="mailto:">
-              <svg class="link pic-email" width="16" height="17">
+            <a class="link link-header header-animation-contact" href="mailto:">
+              <svg class="pic-email" width="16" height="17">
                 <use href="./images/icons.svg#mail"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
           <li class="header-nav-list-contacti-item">
-            <a class="link link-header" href="tel:+380961111111">
+            <a class="link link-header header-animation-contact" href="tel:+380961111111">
               <svg class="pic-smartphone" width="10" height="17">
                 <use href="./images/icons.svg#smartphone"></use>
               </svg>
