--- a/portfolio.html
+++ b/portfolio.html
@@ -25,18 +25,20 @@
         <nav class="header-nav">
           <a class="logo" href="index.html"><span class="logo-cl">Web</span>Studio</a>
           <ul class="list list-block">
-            <li class="header-nav-list-item"><a class="link" href="./index.html">Студія</a></li>
-            <li class="header-nav-list-item active-page">
-              <a class="link" href="./portfolio.html">Портфоліо</a>
+            <li class="header-nav-list-item ">
+              <a class="link header-animation-nav" href="./index.html">Студія</a>
             </li>
-            <li class="header-nav-list-item"><a class="link" href="">Контакти</a></li>
+            <li class="header-nav-list-item active-page ">
+              <a class="link header-animation-nav" href="./portfolio.html">Портфоліо</a>
+            </li>
+            <li class="header-nav-list-item "><a class="link header-animation-nav " href="">Контакти</a></li>
           </ul>
         </nav>
         <ul class="list list-block">
           <li class="header-nav-list-contacti-item">
             <div class="block-email">
-              <a class="link link-header" href="mailto:">
-                <svg class="link pic-email" width="16" height="12">
+              <a class="link link-header header-animation-contact" href="mailto:">
+                <svg class="pic-email" width="16" height="12">
                   <use href="./images/icons.svg#mail"></use>
                 </svg>
                 info@devstudio.com</a
@@ -45,7 +47,7 @@
           </li>
           <li class="header-nav-list-contacti-item">
             <div class="block-smartphone">
-              <a class="link link-header" href="tel:+380961111111">
+              <a class="link link-header header-animation-contact" href="tel:+380961111111">
                 <svg class="pic-smartphone" width="10" height="16">
                   <use href="./images/icons.svg#smartphone"></use>
                 </svg>
